[package]
name = "tester-core"
version = "0.1.0"
authors = ["Mojila <me.mojila@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
env_logger = "0.7.1"

actix-web = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.1.0"